test/integration/test_options/style/plot/backgroundColor/error/invalid_color-hex_length_1.mjs
import Chart from "/test/integration/test_options/style/plot/backgroundColor/chart.js";


const testSteps = [
    Chart.static("#")
]


export default testSteps
